Make sure to handle "magical" values in a couple of places. (Bug #20104)

git-svn-id: https://svn.perl.org/modules/DBD-mysql/trunk@8495 50811bd7-b8ce-0310-adc1-d9db26280581